update-manager (1:0.87.22) hardy; urgency=low

  * UpdateManager/UpdateManager.py:
    - only set http proxy if hostname/port is valid (LP: #219227)
  * DistUpgrade/DistUpgradeController.py: 
    - some more debug logging 
    - fix missing cache open

 --

update-manager (1:0.87.21) hardy; urgency=low

  * DistUpgrade/DistUpgradeController.py:
    - transition sparc users to ports.ubuntu.com on upgrade
  * DistUpgrade/DistUpgrade.cfg.dapper:
    - point to ports.ubuntu.com when fetching 
      release-upgrader-{apt,dpkg} on dapper->hardy upgrades

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 17 Apr 2008 20:24:19 +0200

update-manager (1:0.87.20) hardy; urgency=low

  * DistUpgrade/DistUpgradeView.py:
    - fix incorrect _() call (thanks to Timo Jyrinki)
  * DistUpgrade/mirrors.cfg:
    - fix ports.ubuntu.com mirror URI (LP: #215346)
  * run dpkg with --force-overwrite by default on the server
    too to make the upgrade more robust. this can be overwriten
    with the RELEASE_UPGRADE_NO_FORCE_OVERWRITE environment

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 16 Apr 2008 21:37:49 +0200

update-manager (1:0.87.19) hardy; urgency=low

  * DistUpgrade/DistUpgradeCache.py:
    - only try to upgrade held-back packages in the 
      edgyQuirks handler if they are actually upgradable 
      (thanks to Lamont Jones and James Troup)
  * po/fi.po
    - unfuzzy string (thanks to Timo Jyrinki)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 16 Apr 2008 20:51:05 +0200

update-manager (1:0.87.18) hardy; urgency=low

  * DistUpgrade/DistUpgradeCache.py:
    - remove mail-notificaton, gnome-translate from hardy 
      quirks list (LP: #215690)
  * UpdateManager/DistUpgradeFetcher.py:
    - use sensible gksu prompt when asking for release
      upgrade (LP: #161888)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 14 Apr 2008 21:44:43 +0200

update-manager (1:0.87.17) hardy; urgency=low

  * DistUpgrade/DistUpgradeController.py: