@@ -5,6 +5,10 @@ update-manager (1:0.87.22) hardy; urgency=low
   * DistUpgrade/DistUpgradeController.py: 
     - some more debug logging 
     - fix missing cache open
+    - smaller default network time out
+    - run the initial cache.update() on the unmodified sources.list
+      with only a single retry because it may contain sources that 
+      do not respond
 
  --
 
